Rebrand: DeepWiki -> OpenWiki
- Renamed all projects, namespaces, and references
- Removed all PNG image files
- Cleaned up build artifacts and test results
- Updated solution file and project structure

--- a/backend/OpenWiki.Api.Tests/OpenWiki.Api.Tests.csproj
+++ b/backend/OpenWiki.Api.Tests/OpenWiki.Api.Tests.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DeepWiki.Api\DeepWiki.Api.csproj" />
+    <ProjectReference Include="..\OpenWiki.Api\OpenWiki.Api.csproj" />
   </ItemGroup>
 
 </Project>
